x-overflow resolved

--- a/src/app/elements/home-page-header/home-page-header.component.sass
+++ b/src/app/elements/home-page-header/home-page-header.component.sass
@@ -33,7 +33,7 @@
   position: absolute
   top: 0
   width: 100%
-  height: calc(100% - 3px)
+  height: calc(100% + 25px)
   left: 0
   svg
     position: relative
